manifests/test/artifactory-ingress.yml
---
#
# Ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: artifactory-oss
  namespace: artifactory
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: artifactorytest.service.core-compute-saat.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: artifactory-oss
          servicePort: 80
